# ticketreader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requiremenets.txt
config/: logging.ini
data/: tickets-template.xlsx
ticketreader/: api.py  config.py  exceptions.py  parser.py  schemas.py  utils.py
ticketreader/mercadona/: __init__.py  parser.py  schemas.py  states.py  tabula.py
ticketreader/output/: __init__.py  excel.py
ticketreader/strategies/: __init__.py  statestrategy.py  tabulastrategy.py
