[tool.poetry]
name = "ticketreader"
version = "0.1.0"
description = ""
authors = ["Arubiose <alvaro.rubio.segovia@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "ticketreader", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
pypdf = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
